--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "expo-web-browser": "^14.0.2",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
