--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,9 @@
     "react-native-maps": "^1.20.1",
     "react-native-modal": "^14.0.0-rc.0",
     "react-native-paper": "^5.13.1",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
