--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
+    "zod": "^3.23.8",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
