--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "real-estate",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "packageManager": "yarn@4.10.3",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
